# celery-example

./: README.md  pyproject.toml
app/: celery.py  frontend.py  workers.py
app/workers/: ingest_worker.py
