[tool.poetry]
name = "redbox-proto"
version = "0.1.0"
description = ""
authors = ["Duncan Brown <duncanjbrown@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
celery = "^5.3.6"
fastapi = "^0.109.0"
redis = "^5.0.1"
uvicorn = "^0.27.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.14"
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
